--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       </div>
     </section>
 
-    <p class="note">Thanks for being in my life <3</p>
-    <p class="signature">S &hearts; S &bull; Feb 14, 2026</p>
+    <p class="note">I am glad to have met you and looking forward to making more memories <3 <3</p>
+    <p class="signature">Shiv &hearts; Sri &bull; Feb 14, 2026</p>
   </main>
 
   <script>
