--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </section>
 
-    <p class="note">I am glad to have met you and looking forward to making more memories <3 <3</p>
+    <p class="note">I am glad to have met you and looking forward to making more memories with you <3 <3</p>
     <p class="signature">Shiv &hearts; Sri &bull; Feb 14, 2026</p>
   </main>
 
